--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ position:center; }
 </li>
 <li>
   <a href="lemon.html">
-  <img src="lemon.JPG" style="width:20%"  border="5">
+  <img src="lemon.jpg" style="width:20%"  border="5">
 </a>
 </li>
 <a href="cake.html">
